# Mcpatch2RustClient

./: Cargo.toml
.github/workflows/: release.yml
client/: Cargo.toml  app.manifest  app.rc  build.rs
client/src/: global_config.rs  lib.rs  work.rs
client/src/ui/: main_ui.rs  message_box_ui.rs
