[workspace]
resolver = "2"
members = [
    "config_template_derive",
    "client", 
    "xtask"
]

[workspace.package]
edition = "2021"

[profile.release]
debug = "line-directives-only"
split-debuginfo = "packed"
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
