[package]
name = "client"
version = "0.0.2"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
config_template_derive = { path = "../config_template_derive" }
chrono = {version = "0.4.31", features = ["clock"]}
json = "0.12.4"
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.79"
base64 = "0.22.1"
bytes = "1.6.0"
once_cell = "1.19.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
yaml-rust = "0.4.5"
reqwest_dav = "0.1.11"
serde_json = "1.0"
serde = "1.0"
crc = "3.0.1"
sha1 = "0.10.6"

[target.'cfg(target_os = "windows")'.dependencies]
nwg = {package = "native-windows-gui", version = "1.0.13"}
nwd = {package = "native-windows-derive", version = "1.0.5"}
winapi = {version = "0.3", features = ["winuser", "libloaderapi", "consoleapi", "processenv", "winbase", "wincon"]}

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "2.4"